fixed update and list categories

--- a/views/partials/item_manager_partial.hbs
+++ b/views/partials/item_manager_partial.hbs
@@ -20,12 +20,12 @@
 <div class = 'hiddenconfirm' id = 'hiddenitem{{id}}' style = 'display:none'>
 
 <form method = 'post' action = '/updateitem' enctype="multipart/form-data"">
-<input type = 'text' name = 'newname' id = 'newitemname' placeholder = 'new item name' style='border:none; border-bottom: solid 1px #ccc; font-size: 12pt'>
+<input type = 'text' name = 'newname' id = 'newitemname' placeholder = 'New Item Name' style='border:none; border-bottom: solid 1px #ccc; font-size: 12pt'>
 <input type = 'hidden' value = {{id}} name = itemid>
-<input class="inputbox" id="additemprice" type="number" maxlength="15" placeholder="price ($)" name="price" style='margin-bottom: 10px;border-bottom: solid 1px #ccc; font-family: custom'>
+<input class="inputbox" id="additemprice" type="number" maxlength="15" placeholder="Price ($)" name="price" style='margin-bottom: 10px;border-bottom: solid 1px #ccc; font-family: custom'>
 <textarea class="inputbox" id='description' rows="6" placeholder='Please write a new description of your item here.' name='description' cols="50" style='border: solid 1px #ccc; font-family: custom; border-radius: 10px;'></textarea>
 <select id='category' class = id='category' name = 'category' style='color: #B5B5B5; width: 160px'>
-              <option select="select"></option>
+              <option selected disabled hidden value = ''>New Category</option>
               <option value="clothes">Clothes</option>
               <option value="books">Books</option>
               <option value="tech">Tech</option>
@@ -40,7 +40,7 @@
 
 <!--<li><input class="twobuttonsaddtag" id="addtag" type="button" value="+ +" style="left: 300px;"></li>-->
 <!--<div id="tags"></div>-->
-<br><br>upload a new photo: 
+<br><br>Upload A New Photo: 
 <input id = 'picture' type="file" name="picture" style='position:relative; margin-top: -18px; margin-left: 140px;'/>
 
 <li><input class="twobuttonsadditem" id="submititem{{id}}" type="submit" value="confirm" style="font-family: custom; color: #000; left: 150px; background-color: #fff; border: solid 1px #E1E1E1"></li>
