--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -54,7 +54,7 @@
 <!--             <textarea id='description' rows="8" placeholder='description' name='description' cols="50" required></textarea> --> <br>
             
             <select id='category' class = id='category' name = 'category' required>
-              <option selected='selected'>select a category</option>
+              <option selected disabled hidden value = ''>Category</option>
               <option value="clothes">Clothes</option>
               <option value="books">Books</option>
               <option value="tech">Tech</option>
