--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -7,7 +7,8 @@
     <h1 id = 'welcome'>
       A site to buy, sell, trade, or just give away items - made by MIT students for MIT students!
     </h1>
-    <h4 style='margin-top:-80px;'>Created by Reva, Rebecca, and Chris for <a href='http://6.148.scripts.mit.edu'>6.148</a> 2017.</h4>
+    <h4 style='margin-top:-80px;'>Created by Reva, Rebecca, and Chris. <br><br><br>
+    1st place winner of the <a href='http://6.148.scripts.mit.edu'>6.148</a> 2017 competition (rookie division).</h4>
     <form action="mailto:beaverplusteam@mit.edu" method="GET">
       <input type="submit" id='aboutcontact' value="Contact us!" />
       {{#if onIndex}}
